tests/error/comprehension_errors/used_twice3.err
Error: Copy violation (at $FILE:13:12)
   | 
11 | @guppy
12 | def foo(qs: list[qubit] @owned) -> list[qubit]:
13 |     return [q for q in qs for x in bar(q)]
   |             ^ Variable `q` with non-copyable type `qubit` cannot be moved
   |               ...

Note:
   | 
12 | def foo(qs: list[qubit] @owned) -> list[qubit]:
13 |     return [q for q in qs for x in bar(q)]
   |                                        - Variable `q` already consumed here

Guppy compilation failed due to 1 previous error
